# cpp-basic_stuff

./: README.md
cpp/: README.md
cpp/hello1/: .travis.yml  LICENSE  hello.cpp
cpp/hello2/: .gitexclude  .gitignore  CMakeLists.txt  Makefile  README.md  hello2.cpp
